wip: persisted legal holds
